Implement API endpoints
Implement 'GET /repositories' API endpoint to list GH repos from existing GH integrations

Get the API base URL off of the GH Integration config

Add missing repo fields to 'GET /repositories' response

Add 'defaultBranch' to the 'GET /repositories' endpoint

Use short slug for organization name

Make sure yarn.lock is up-to-date

Extract generation of default catalog-info content into catalogInfoGenerator.ts

[WIP] Add logic to submit PRs to repos using the right GitHub Integration

Create/Update PRs if needed and add Location

Get and set import status accordingly

Regen yarn.lock upon rebase

Call the 'analyze-location' API to generate the content of the catalog-info.yaml file

If no entity is returned, fallback to a default static Component

Implement 'GET /imports' endpoint

Remove unnecessary import statuses from OpenAPI spec definition for now

Regen yarn.lock upon rebase

Slightly improve performance of the 'GET /repositories' endpoint

Unit-test catalogInfoGenerator

add tests

Regen yarn.lock

No longer return default catalog-info content when listing repositories

This made use of the 'POST /catalog/analyze-locations' Catalog endpoint for each repo, and with a lot of repositories returned by the GitHub Integration, can take very long.

Mark repository.url field mandatory in Import Request

Bump openapicmd package used to generate type definitions
