# plugins/bulk-import-backend/src/schema/openapi.yaml
@@ -41,6 +41,8 @@ paths:
               examples:
                 multipleRepos:
                   $ref: '#/components/examples/multipleRepos'
+        500:
+          description: Generic error
 
   /imports:
     get:
@@ -61,6 +63,8 @@ paths:
               examples:
                 twoImports:
                   $ref: '#/components/examples/twoImports'
+        500:
+          description: Generic error
 
     post:
       operationId: createImportJobs
@@ -113,11 +117,11 @@ components:
         organization:
           type: string
           description: organization which the repository is part of
-        defaultCatalogInfo:
-          type: string
-          description: base content of the catalog-info.yaml to include in the import Pull Request.
         importStatus:
           $ref: '#/components/schemas/ImportStatus'
+        defaultBranch:
+          type: string
+          description: default branch
 
     ApprovalTool:
       type: string
@@ -130,16 +134,16 @@ components:
       nullable: true
       description: Import Job status
       enum:
-        - WAIT_APPROVAL
+        #- WAIT_APPROVAL
         - ADDED
-        - WAIT_PR_START
+        #- WAIT_PR_START
         - WAIT_PR_APPROVAL
-        - PR_REJECTED
-        - WAIT_SERVICENOW_START
-        - WAIT_SERVICENOW_RESOLUTION
+        #- PR_REJECTED
+        #- WAIT_SERVICENOW_START
+        #- WAIT_SERVICENOW_RESOLUTION
         - PR_ERROR
-        - SERVICENOW_ERROR
-        - SERVICENOW_TICKET_REJECTED
+        #- SERVICENOW_ERROR
+        #- SERVICENOW_TICKET_REJECTED
         - null
 
     Import:
@@ -178,15 +182,22 @@ components:
                 url:
                   type: string
                   description: URL of the Pull Request
+                number:
+                  type: number
+                  description: Pull Request number
 
     ImportRequest:
       title: Import Job request
       type: object
+      required:
+        - repository
       properties:
         approvalTool:
           $ref: '#/components/schemas/ApprovalTool'
         repository:
           type: object
+          required:
+            - url
           properties:
             name:
               type: string
@@ -197,6 +208,9 @@ components:
             organization:
               type: string
               description: organization which the repository is part of
+            defaultBranch:
+              type: string
+              description: default branch
         catalogInfoContent:
           type: string
           description: content of the catalog-info.yaml to include in the import Pull Request.
@@ -229,50 +243,20 @@ components:
         - id: 'unique-id-1'
           name: 'pet-app'
           url: 'https://github.com/my-org/pet-app'
-          organization: 'https://github.com/my-org'
+          organization: 'my-org'
           importStatus: 'WAIT_PR_APPROVAL'
-          defaultCatalogInfo: |-
-            apiVersion: backstage.io/v1alpha1
-            kind: Component
-            metadata:
-              name: pet-app
-              annotations:
-                github.com/project-slug: my-org/pet-app
-            spec:
-              type: other
-              lifecycle: unknown
-              owner: my-org
+          defaultBranch: 'main'
         - id: 'unique-id-2'
           name: 'project-zero'
           url: 'https://ghe.example.com/my-other-org/project-zero'
-          organization: 'https://ghe.example.com/my-other-org'
+          organization: 'my-other-org'
           importStatus: 'PR_REJECTED'
-          defaultCatalogInfo: |-
-            apiVersion: backstage.io/v1alpha1
-            kind: Component
-            metadata:
-              name: project-zero
-              annotations:
-                github.com/project-slug: my-other-org/project-zero
-            spec:
-              type: other
-              lifecycle: unknown
-              owner: my-other-org
+          defaultBranch: 'dev'
         - id: 'unique-id-2'
           name: 'project-one'
+          defaultBranch: 'trunk'
           url: 'https://ghe.example.com/my-other-org-2/project-one'
-          organization: 'https://ghe.example.com/my-other-org-2'
-          defaultCatalogInfo: |-
-            apiVersion: backstage.io/v1alpha1
-            kind: Component
-            metadata:
-              name: project-one
-              annotations:
-                github.com/project-slug: my-other-org-2/project-one
-            spec:
-              type: other
-              lifecycle: unknown
-              owner: my-other-org-2
+          organization: 'my-other-org-2'
 
     twoImports:
       summary: Two import job requests
@@ -285,10 +269,11 @@ components:
           repository:
             name: 'pet-app'
             url: 'https://github.com/my-org/pet-app'
-            organization: 'https://github.com/my-org'
+            organization: 'my-org'
           github:
             pullRequest:
               url: 'https://github.com/my-org/pet-app/pull/1'
+              number: 1
         - id: 'bulk-import-id-2'
           status: 'PR_REJECTED'
           errors: []
@@ -297,10 +282,11 @@ components:
           repository:
             name: 'pet-app-test'
             url: 'https://github.com/my-org/pet-app-test'
-            organization: 'https://github.com/my-org'
+            organization: 'my-org'
           github:
             pullRequest:
               url: 'https://github.com/my-org/pet-app-test/pull/10'
+              number: 10
 
     multipleImportRequests:
       summary: Multiple import requests
@@ -309,7 +295,8 @@ components:
           repository:
             name: 'pet-app'
             url: 'https://github.com/my-org/pet-app'
-            organization: 'https://github.com/my-org'
+            organization: 'my-org'
+            defaultBranch: main
           github:
             pullRequest:
               title: 'Add default catalog-info.yaml to import to Red Hat Developer Hub'
@@ -317,7 +304,8 @@ components:
           repository:
             name: 'project-zero'
             url: 'https://ghe.example.com/my-other-org/project-zero'
-            organization: 'https://ghe.example.com/my-other-org'
+            organization: 'my-other-org'
+            defaultBranch: dev
           github:
             pullRequest:
               title: 'Add custom catalog-info.yaml to import to Red Hat Developer Hub'
